First working build with Guava 30.1